--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<div class="container">
 		<h3 class="tittle">ACERCA DE SALADITOS SABRORICOS</h3>
 		<div class="col-md-5 about-grid-left">
-			<img class="img-responsive" src="images/productos/sabroricos-37.jpg" alt=""/>
+			<img class="img-responsive" src="img/productos/producto18-3.jpg" alt=""/>
 		</div>
 		<div class="col-md-7 about-grid">
 							<h3>Historia de Saladitos Sabroricos</h3>
@@ -27,7 +27,7 @@
 			<div class="main">
 				<div class="col-md-3 view-grid">
 					<div class="view fifth-effect">
-						 <a href="#" title="Full Image"><img src="images/team-1.jpg" alt="" /></a>
+						 <a title="Full Image"><img src="img/team-1.jpg" alt="" /></a>
 						 <div class="mask"></div>
 					</div> 
 				</div>
