--- a/blog.html
+++ b/blog.html
@@ -13,18 +13,18 @@
 		<h3 class="tittle">Productos</h3>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-					<a href="#"><img src="images/productos/sabroricos-3.jpg" class="img-responsive" alt=""/></a>
+					<a><img src="img/productos/producto15-3.jpg" class="img-responsive" alt=""/></a>
 					<div class="text">
-						<a href="#"> Nombre del producto</a>
+						<a> Nombre del producto</a>
 					</div>
 					<div class="admin-tag">
 					<p class="erat">Descripcion de producto</p>
 					</div>
 			</div>
 			<div class="blog-post">
-					<a href="#"><img src="images/productos/sabroricos-32.jpg" class="img-responsive" alt="  "/></a>
+					<a><img src="img/productos/producto16-3.jpg" class="img-responsive" alt="  "/></a>
 					<div class="text">
-						<a href="#"> Aliquam erat volutpat</a>
+						<a> Nombre del producto</a>
 					</div>
 					<div class="admin-tag">
 					<p class="erat">Descripcion de producto</p>
@@ -33,18 +33,18 @@
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-36.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto1-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-30.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto3-3.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
@@ -53,18 +53,18 @@
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-6.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto4-2.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-7.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto5-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
