--- a/blog2.html
+++ b/blog2.html
@@ -1,24 +1,4 @@
 <body>
-<!-- header -->
-<div class="header-top">
-	<div class="container">
-				<div class="header-top-left">
-					<p>Saboreate con saladitos sabroricos</p>
-				</div>
-				<div class="header-top-mid">
-					<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span><p>664-525-6812</p>
-				</div>
-				<div class="header-top-right">
-					<ul>
-						<li><a href="https://www.facebook.com/Sabroricos" class="f1"> </a></li>
-						<li><a href="https://www.facebook.com/Sabroricos" class="f2"> </a></li>
-						
-					</ul>
-				</div>
-				<div class="clearfix"></div>
-	</div>
-</div>
-<!-- //header -->
 <!-- strip -->
 <div class="strip"></div>
 <!-- //strip -->
@@ -62,18 +42,18 @@
 		<h3 class="tittle">Productos</h3>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-					<a href="#"><img src="images/productos/sabroricos-3.jpg" class="img-responsive" alt=""/></a>
+					<a><img src="img/productos/producto6-1.jpg" class="img-responsive" alt=""/></a>
 					<div class="text">
-						<a href="#"> Nombre del producto</a>
+						<a> Nombre del producto</a>
 					</div>
 					<div class="admin-tag">
 					<p class="erat">Descripcion de producto</p>
 					</div>
 			</div>
 			<div class="blog-post">
-					<a href="#"><img src="images/productos/sabroricos-32.jpg" class="img-responsive" alt="  "/></a>
+					<a><img src="img/productos/producto7-1.jpg" class="img-responsive" alt="  "/></a>
 					<div class="text">
-						<a href="#"> Aliquam erat volutpat</a>
+						<a> Aliquam erat volutpat</a>
 					</div>
 					<div class="admin-tag">
 					<p class="erat">Descripcion de producto</p>
@@ -82,18 +62,18 @@
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-36.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto8-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-30.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto9-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
@@ -102,18 +82,18 @@
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-6.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto10-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-7.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto11-2.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
