--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,8 @@
 						});
 			</script>
 				<div class="view view-seventh">
-                    <a href="images/b7.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-21.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto1-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto1-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                        <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -27,7 +28,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-24.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto3-3.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto3-3.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -35,7 +37,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto4-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto4-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -43,7 +46,8 @@
                     </div></a>
                 </div>
 				<div class="view view-seventh">
-                    <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-33.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto5-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto5-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                        <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -51,7 +55,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-35.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto6-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto6-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -59,7 +64,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-26.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-26.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto7-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto7-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -67,7 +73,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-29.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-40.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto8-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto8-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                        <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -75,7 +82,8 @@
                     </div></a>
                 </div>
 				<div class="view view-seventh">
-                    <a href="images/productos/sabroricos-23.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-23.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto9-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto9-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -83,7 +91,8 @@
                     </div></a>
                 </div>
 				<div class="view view-seventh">
-                    <a href="images/productos/sabroricos-20.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-20.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto10-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto10-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
