--- a/blog4.html
+++ b/blog4.html
@@ -10,18 +10,18 @@
 		<h3 class="tittle">Productos</h3>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-					<a href="#"><img src="images/productos/sabroricos-3.jpg" class="img-responsive" alt=""/></a>
+					<a><img src="img/productos/producto18-1.jpg" class="img-responsive" alt=""/></a>
 					<div class="text">
-						<a href="#"> Nombre del producto</a>
+						<a> Nombre del producto</a>
 					</div>
 					<div class="admin-tag">
 					<p class="erat">Descripcion de producto</p>
 					</div>
 			</div>
 			<div class="blog-post">
-					<a href="#"><img src="images/productos/sabroricos-32.jpg" class="img-responsive" alt="  "/></a>
+					<a><img src="img/productos/producto19-1.jpg" class="img-responsive" alt="  "/></a>
 					<div class="text">
-						<a href="#"> Aliquam erat volutpat</a>
+						<a> Nombre del producto</a>
 					</div>
 					<div class="admin-tag">
 					<p class="erat">Descripcion de producto</p>
@@ -30,18 +30,18 @@
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-36.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto20-2.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-30.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto7-2.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
@@ -50,18 +50,18 @@
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-6.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto15-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 			<div class="blog-post">
-				<a href="#"><img src="images/productos/sabroricos-7.jpg" class="img-responsive" alt="  "/></a>
+				<a><img src="img/productos/producto11-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Nombre del producto</a>
+					<a> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
 				<p class="erat">Descripcion de producto</p>
