--- a/gallery2.html
+++ b/gallery2.html
@@ -18,7 +18,8 @@
 						});
 			</script>
 				<div class="view view-seventh">
-                    <a href="images/b7.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-21.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto11-2.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto11-2.jpg" alt="" class="img-responsive">
                     <div class="mask">
                        <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -26,7 +27,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-24.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto12-2.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto12-2.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -34,7 +36,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto13-2.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto13-2.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -42,7 +45,8 @@
                     </div></a>
                 </div>
 				<div class="view view-seventh">
-                    <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-33.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto14-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto14-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                        <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -50,7 +54,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-35.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto15-4.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto15-4.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -58,7 +63,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-26.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-26.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto15-4.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto15-4.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -66,7 +72,8 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-29.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-40.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto16-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto16-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                        <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -74,7 +81,8 @@
                     </div></a>
                 </div>
 				<div class="view view-seventh">
-                    <a href="images/productos/sabroricos-23.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-23.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto17-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto17-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -82,7 +90,8 @@
                     </div></a>
                 </div>
 				<div class="view view-seventh">
-                    <a href="images/productos/sabroricos-20.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-20.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto18-2.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto18-2.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
