--- a/gallery3.html
+++ b/gallery3.html
@@ -15,7 +15,8 @@
 						});
 			</script>
 				<div class="view view-seventh">
-                    <a href="images/b7.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-21.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto19-1.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto19-1.jpg" alt="" class="img-responsive">
                     <div class="mask">
                        <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
@@ -23,14 +24,15 @@
                     </div></a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos-24.jpg" alt="" class="img-responsive">
+                    <a href="img/productos/producto20-2.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce">
+                        <img src="img/productos/producto20-2.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
                         <p>Descripcion de producto sabrorico</p>
                         
                     </div></a>
                 </div>
-                <div class="view view-seventh">
+                <!-- <div class="view view-seventh">
                     <a href="images/productos/sabroricos-21.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Nombre del dulce"><img src="images/productos/sabroricos.jpg" alt="" class="img-responsive">
                     <div class="mask">
                         <h4>NOMBRE PRODUCTO</h4>
@@ -85,7 +87,7 @@
                         <p>Descripcion de producto sabrorico</p>
                         
                     </div></a>
-                </div>
+                </div> -->
                 <!--start-news-pagenate-->
 				<div class="blog-pagenat">
 					<ul>
