--- a/about.html
+++ b/about.html
@@ -82,11 +82,11 @@
 						<p>En Saladitos Sabroricos nos adapatamos a tus necesidades y estamos interesados en escucharte, contactanos para mas informacion, o ve directamente a la seccion de COTIZA.</p>
 						
 						<ul>
-							<li><a href="typography.html">¡Cotiza ahora!</a></li>
-							<li><a href="blog.html">¡Conoce los deliciosos productos!</a></li>
-							<li><a href="services.html">¡Conoce todos nuestros servicios!</a></li>
-							<li><a href="contact.html">¡Contacta con nosotros!</a></li>
-							<li><a href="gallery.html">¡Saboreate y lokoalate!</a></li>
+							<li><a href="#cotizacion">¡Cotiza ahora!</a></li>
+							<li><a href="#productos">¡Conoce los deliciosos productos!</a></li>
+							<li><a href="#servicios">¡Conoce todos nuestros servicios!</a></li>
+							<li><a href="#contacto">¡Contacta con nosotros!</a></li>
+							<li><a href="#galeria">¡Saboreate y lokoalate!</a></li>
 						</ul>
 					
 			</div>
