--- a/inicio.html
+++ b/inicio.html
@@ -94,14 +94,14 @@
 			</div>
 			<div class="col-md-6 special-right">
 				<div class="sp-wid">
-					<h4>SOLO DULCES CON LA MEJOR CALIDAD</h4>
-					<p>En Saladitos Sabroricos no solo nos preocupamos por el gran sabor de nuestros productos, si no tambien en tener la calidad, presentacion y presencia que nuestros clientes necesitan, por eso, esperanos, muy pronto ¡mas cerca de ti!</p>
+					<h4>MISION</h4>
+					<p>Nuestra misión es ser reconocidos a nivel regional, ofreciendo productos hechos con pasión por los altos estándares de calidad y compromiso con la satisfaccion de nuestros clientes y a la vez con nuestros asociados para que puedan alcanzar su más alto potencial.</p>
 				</div>
 			</div>
 			<div class="col-md-6 special-right l-left">
 				<div class="sp-wid l-wid">
-					<h4>LOS MEJORES DULCES DE LA REGION</h4>
-					<p> En Saladitos Sabroricos estan los mejores dulces a la region, para que nuestros clientes satisfagan sus antojos, nosotros nos encargamos de estar proporcionando productos de excelente calidad con un inigualable servicio </p>
+					<h4>VISIÓN</h4>
+					<p> Nuestra visión representa la mayor aspiración. Es nuestro propósito y nuestra razón de existir como empresa y se refleja en la historia que deseamos escribir en toda la region, ser referencia de calidad y sabor para futuras generaciones. </p>
 				</div>
 			</div>
 			<div class="col-md-6 special-left l-right l-grids">
