--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,33 @@
 </div>
 <!-- //banner -->
 <!--blog-starts--> 
+<!-- Productos de izquierda a derecha por pagina
+Gomiricas de naranja
+Serpentina con saladillos
+Rialto con chile
+Gomirica de durazno
+Guayaba con chile
+Gomirica de guzano
+Saladito con chile y limon
+Paleta con sal
+Salado adobado
+Salado con sal 
+Pendiente-Repetido foto no 5
+Mango con chile
+--pagina 3
+Piña con chile
+Gomirica de sandia
+Pendiente-Repetido
+Pulpa tochito para escarchar
+Pendiente-Repetido
+Salado con limon
+--Pagina cuatro
+Chammy con siruela
+Tochomorocho
+Gomiricas de mango
+Chammy con mango
+Pendiente-Repetido
+Pendiente-Repetido -->
 <div class="blog-section">
 	<div class="container"> 
 		<h3 class="tittle">Productos</h3>
@@ -15,19 +42,19 @@
 			<div class="blog-post">
 					<a><img src="img/productos/producto15-3.jpg" class="img-responsive" alt=""/></a>
 					<div class="text">
-						<a> Nombre del producto</a>
+						<a> Gomiricas de Naranja</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Descripcion de producto</p>
+					<p class="erat">Deliciosa gomirica, acidito y delicioso sabor sobre gomitas ricas de Naranja</p>
 					</div>
 			</div>
 			<div class="blog-post">
 					<a><img src="img/productos/producto16-3.jpg" class="img-responsive" alt="  "/></a>
 					<div class="text">
-						<a> Nombre del producto</a>
+						<a> Gomirica de durazno</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Descripcion de producto</p>
+					<p class="erat">¡La preferida!, pero ¿comó comer solo uno?, no importa, ¡lokoalocate de sabor!</p>
 					</div>
 			</div>
 		</div>
@@ -35,19 +62,19 @@
 			<div class="blog-post">
 				<a><img src="img/productos/producto1-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a> Serpentina con saladillos</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">Sabor clasico, pero mas delicioso que nunca, ¡Sabrorico!</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a><img src="img/productos/producto3-3.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Guayaba con chile</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">¡La guayaba mas sabrosa!, ¡lokoalocate de sabor!</p>
 				</div>
 			</div>
 		</div>
@@ -55,19 +82,19 @@
 			<div class="blog-post">
 				<a><img src="img/productos/producto4-2.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a> Rielito con chile</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">El rielito preferido de todos, ¡lokoalocate con su sabor!</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a><img src="img/productos/producto5-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a> Gomirica de guzano</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">¡Las favoritas de los niños! Gomiricas picositas y dulcesitas</p>
 				</div>
 			</div>
 		</div>
