--- a/blog2.html
+++ b/blog2.html
@@ -2,41 +2,38 @@
 <!-- strip -->
 <div class="strip"></div>
 <!-- //strip -->
-<!-- logo -->
-<div class="logo-head">
-	<div class="container">
-		<div class="logo">
-			<h1><a href="index.html"><img src="images/logo.png" alt=""/></a></h1>
-		</div>
-		<div class="navigation">
-				<span class="menu"><img src="images/menu.png" alt=""/></span>
-				<div class="clearfix"></div>
-				<ul class="nav1">
-					<li><a class="hvr-overline-from-center button2" href="about.html">ACERCA</a></li>
-					<li><a class="hvr-overline-from-center button2" href="services.html">SERVICIOS</a></li>
-					<li><a class="active hvr-overline-from-center button2" href="blog.html">PRODUCTOS</a></li>
-					<li><a class="hvr-overline-from-center button2" href="gallery.html">GALERIA</a></li>	
-					<li><a class="hvr-overline-from-center button2" href="contact.html">CONTACTO</a></li>
-					<li><a class="hvr-overline-from-center button2" href="typography.html">COTIZA</a></li>
-				</ul>
-				<!-- script for menu -->
-					<script> 
-						$( "span.menu" ).click(function() {
-						$( "ul.nav1" ).slideToggle( 300, function() {
-						 // Animation complete.
-						});
-						});
-					</script>
-				<!-- //script for menu -->	
-		</div>
-	</div>
-</div>
-<!-- //logo -->
 <!-- banner -->
 <div class="banner page-head">	
 </div>
 <!-- //banner -->
 <!--blog-starts--> 
+<!-- Productos de izquierda a derecha por pagina
+Gomiricas de naranja
+Serpentina con saladillos
+Rialto con chile
+Gomirica de durazno
+Guayaba con chile
+Gomirica de guzano
+--> Saladito con chile y limon
+Paleta con sal
+Salado adobado
+Salado con sal 
+Pendiente-Repetido foto no 5
+Mango con chile
+--pagina 3
+Piña con chile
+Gomirica de sandia
+Pendiente-Repetido
+Pulpa tochito para escarchar
+Pendiente-Repetido
+Salado con limon
+--Pagina cuatro
+Chammy con siruela
+Tochomorocho
+Gomiricas de mango
+Chammy con mango
+Pendiente-Repetido
+Pendiente-Repetido -->
 <div class="blog-section">
 	<div class="container"> 
 		<h3 class="tittle">Productos</h3>
@@ -44,19 +41,19 @@
 			<div class="blog-post">
 					<a><img src="img/productos/producto6-1.jpg" class="img-responsive" alt=""/></a>
 					<div class="text">
-						<a> Nombre del producto</a>
+						<a> Saladito con Chile y Limon</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Descripcion de producto</p>
+					<p class="erat">El delicioso Saladito con Chile y Limon, ¡Sabrorrrico!</p>
 					</div>
 			</div>
 			<div class="blog-post">
 					<a><img src="img/productos/producto7-1.jpg" class="img-responsive" alt="  "/></a>
 					<div class="text">
-						<a> Aliquam erat volutpat</a>
+						<a>Saladito con sal</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Descripcion de producto</p>
+					<p class="erat">De los clasicos, el Saladito con sal, el mismo sabor de siempre, pero ahora ¡con un toque Sabrorico!</p>
 					</div>
 			</div>
 		</div>
@@ -64,19 +61,19 @@
 			<div class="blog-post">
 				<a><img src="img/productos/producto8-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Paleta con sal</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">Saladito y picosito, uno de los favoritos para acompañar cualquier fruta</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a><img src="img/productos/producto9-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Producto repetido</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">¡Delicioso!</p>
 				</div>
 			</div>
 		</div>
@@ -84,19 +81,19 @@
 			<div class="blog-post">
 				<a><img src="img/productos/producto10-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Salado adobado</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">Saladito y adobadito, con limonsito, ¡UHMMM!, ¡lokoalocate de sabor!</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a><img src="img/productos/producto11-2.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Mango con chile</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">Delicioso mango seco, escarchado con picosito y sabroso chile, ¡Sabrorico!</p>
 				</div>
 			</div>
 		</div>
