--- a/blog3.html
+++ b/blog3.html
@@ -1,4 +1,30 @@
-
+<!-- Productos de izquierda a derecha por pagina
+Gomiricas de naranja
+Serpentina con saladillos
+Rialto con chile
+Gomirica de durazno
+Guayaba con chile
+Gomirica de guzano
+--> Saladito con chile y limon
+Paleta con sal
+Salado adobado
+Salado con sal 
+Pendiente-Repetido foto no 5
+Mango con chile
+--pagina 3
+Piña con chile
+Gomirica de sandia
+Pendiente-Repetido
+Pulpa tochito para escarchar
+Pendiente-Repetido
+Salado con limon
+--Pagina cuatro
+Chammy con siruela
+Tochomorocho
+Gomiricas de mango
+Chammy con mango
+Pendiente-Repetido
+Pendiente-Repetido -->
 <body>
 <!-- banner -->
 <div class="banner page-head">	
@@ -12,19 +38,19 @@
 			<div class="blog-post">
 					<a><img src="img/productos/producto12-2.jpg" class="img-responsive" alt=""/></a>
 					<div class="text">
-						<a> Nombre del producto</a>
+						<a>Piña con Chile</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Descripcion de producto</p>
+					<p class="erat">Deliciosa piña seca con chilito, picosita y saladita, ¡lokoalate de sabor!</p>
 					</div>
 			</div>
 			<div class="blog-post">
 					<a><img src="img/productos/producto13-1.jpg" class="img-responsive" alt="  "/></a>
 					<div class="text">
-						<a> Aliquam erat volutpat</a>
+						<a>Pulpa tochito para escarchar</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Descripcion de producto</p>
+					<p class="erat">Perfecta con cualquier bebida, dale una escarcha de sabor Sabrorico a tus bebidas</p>
 					</div>
 			</div>
 		</div>
@@ -32,19 +58,19 @@
 			<div class="blog-post">
 				<a><img src="img/productos/producto14-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Gomirica de Sandia</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">Gomita de Sandia cubierta con delicioso y picosito chamoy Sabrorico, ¡Deliciosas!</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a><img src="img/productos/producto15-4.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Gomirica de Naranja</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">Deliciosa gomita de naranja con el delicioso toque secreto Sabrorico</p>
 				</div>
 			</div>
 		</div>
@@ -52,19 +78,19 @@
 			<div class="blog-post">
 				<a><img src="img/productos/producto16-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Gomirica de Durazon</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">La favorita de todas las edades, la clasica gomita de durazno con el delicioso sabor Sabrorico</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a><img src="img/productos/producto17-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Salado con limon</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">Rico saladito con limon, para mezclarlo con lo que quieras, ¡Delicioso!</p>
 				</div>
 			</div>
 		</div>
