--- a/blog4.html
+++ b/blog4.html
@@ -1,4 +1,30 @@
-
+<!-- Productos de izquierda a derecha por pagina
+Gomiricas de naranja
+Serpentina con saladillos
+Rialto con chile
+Gomirica de durazno
+Guayaba con chile
+Gomirica de guzano
+--> Saladito con chile y limon
+Paleta con sal
+Salado adobado
+Salado con sal 
+Pendiente-Repetido foto no 5
+Mango con chile
+--pagina 3
+Piña con chile
+Gomirica de sandia
+Pendiente-Repetido
+Pulpa tochito para escarchar
+Pendiente-Repetido
+Salado con limon
+--Pagina cuatro
+Chammy con siruela
+Tochomorocho
+Gomiricas de mango
+Chammy con mango
+Pendiente-Repetido
+Pendiente-Repetido -->
 <body>
 <!-- banner -->
 <div class="banner page-head">	
@@ -12,19 +38,19 @@
 			<div class="blog-post">
 					<a><img src="img/productos/producto18-1.jpg" class="img-responsive" alt=""/></a>
 					<div class="text">
-						<a> Nombre del producto</a>
+						<a>Chamoy con Ciruela</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Descripcion de producto</p>
+					<p class="erat">Delicioso Chamoy Sabrorico, mezclado y preparado con Ciruela</p>
 					</div>
 			</div>
 			<div class="blog-post">
 					<a><img src="img/productos/producto19-1.jpg" class="img-responsive" alt="  "/></a>
 					<div class="text">
-						<a> Nombre del producto</a>
+						<a>Chamoy con Mango</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Descripcion de producto</p>
+					<p class="erat">Delicioso Chamoy con rico mango, ¡lokoalate!</p>
 					</div>
 			</div>
 		</div>
@@ -32,19 +58,19 @@
 			<div class="blog-post">
 				<a><img src="img/productos/producto20-2.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Tochomorocho</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">De Tochomorocho no se puede decir mucho, solo que su sabor es inigualable, ¡pruebalo!</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a><img src="img/productos/producto7-2.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a> Repetido</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">¡Delicioso!</p>
 				</div>
 			</div>
 		</div>
@@ -52,19 +78,19 @@
 			<div class="blog-post">
 				<a><img src="img/productos/producto15-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a>Gomirica de Mango</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">Deliciosas gomitas de mango bañadas en la receta secreta de Saladitos Sabroricos™</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a><img src="img/productos/producto11-1.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a> Nombre del producto</a>
+					<a> Repetido </a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Descripcion de producto</p>
+				<p class="erat">¡Delicioso!</p>
 				</div>
 			</div>
 		</div>
