--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
 					<div class="col-md-3 ser-first-grid text-center">
 						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
 						<h3>EVENTOS</h3>
-						<p>Los mejores dulces en calidad y sabor para hacer de un evento algo inolvidable, sorprente a tus invitados</p>
+						<p>Los mejores dulces en calidad y sabor para hacer de un evento algo inolvidable, sorprende a tus invitados.</p>
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
 						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
@@ -48,37 +48,19 @@
 			<br><br><br>
 				<div class="col-md-4 services-grid">
 					<div class="services-left">
+<!-- 						
+Top mas vendidos
+1.-Mango con chile
+2.-Rieltito con chile
+3.Gomirica de sandia
+4.Tochomorocho
+5.Saladito con chile
+6.Gomiricas de gusanillo
+7.Gomiricas de durazno
+8.Pulpa tochito para escarchar
+9.Gomiricas de naranja
+ -->
 						<p>01</p>
-					</div>
-					<div class="services-right">
-						<h3>GOMIRICA DE SANDIA</h3>
-						<p>Una de las preferidas por pequeños y grandes, la mas vendida para disfrutar a todas horas del dia, balance perfecto entre dulzura y acidito </p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="col-md-4 services-grid">
-					<div class="services-left">
-						<p>02</p>
-					</div>
-					<div class="services-right">
-						<h3>GOMIRICAS DE DURAZNO</h3>
-						<p>Las clasicas de Durazno, ahora con el acidito y picosito sabor de Saladitos Sabroricos, la ponen entre las preferidas de todos por igual </p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="col-md-4 services-grid">
-					<div class="services-left">
-						<p>03</p>
-					</div>
-					<div class="services-right">
-						<h3>RIELITO CON CHILE</h3>
-						<p>Los rielitos se han mantenido en el gusto de la gente por decadas, el sabor de siempre con la calidad y sabor de Saladitos Sabroricos</p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="col-md-4 services-grid">
-					<div class="services-left">
-						<p>04</p>
 					</div>
 					<div class="services-right">
 						<h3>MANGO CON CHILE</h3>
@@ -88,12 +70,46 @@
 				</div>
 				<div class="col-md-4 services-grid">
 					<div class="services-left">
+						<p>02</p>
+					</div>
+					<div class="services-right">
+						<!-- <h3>GOMIRICAS DE DURAZNO</h3>
+						<p>Las clasicas de Durazno, ahora con el acidito y picosito sabor de Saladitos Sabroricos, la ponen entre las preferidas de todos por igual </p> -->
+						<h3>RIELITO CON CHILE</h3>
+						<p>Los rielitos se han mantenido en el gusto de la gente por decadas, el sabor de siempre con la calidad y sabor de Saladitos Sabroricos</p>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="col-md-4 services-grid">
+					<div class="services-left">
+						<p>03</p>
+					</div>
+					<div class="services-right">
+						<h3>TOCHOMOROCHO</h3>
+						 <p>El rico tochomorocho, delicioso picosito y saladito, para esa tardes de carne asada en familia, el Tochomorocho va bien con todo</p>
+						<!-- <h3>RIELITO CON CHILE</h3>
+						<p>Los rielitos se han mantenido en el gusto de la gente por decadas, el sabor de siempre con la calidad y sabor de Saladitos Sabroricos</p> -->
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="col-md-4 services-grid">
+					<div class="services-left">
+						<p>04</p>
+					</div>
+					<div class="services-right">
+						<h3>SALADITO CON CHILE</h3>
+						<p>El favorito de las fiestas, el delicioso saladito con chile, lokoalocate con su inigualable sabor, de Saladitos Sabroricos</p>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="col-md-4 services-grid">
+					<div class="services-left">
 						<p>05</p>
 					</div>
 					<div class="services-right">
-						<h3>GOMIRICAS DE GUSANITO</h3>
+						<!-- <h3>GOMIRICAS DE GUSANITO</h3>
 						<p>Las favoritas de los niños, las gomiricas de gusano son deliciosamente Sabroricas, con esa combinacion agridulce que les encanta</p>
-					</div>
+					 --></div>
 					<div class="clearfix"></div>
 				</div>
 				<div class="col-md-4 services-grid">
@@ -101,11 +117,50 @@
 						<p>06</p>
 					</div>
 					<div class="services-right">
-						<h3>GOMIRICAS DE NARANJA</h3>
+						<h3>GOMIRICAS DE GUSANITO</h3>
+						<p>Las favoritas de los niños, las gomiricas de gusano son deliciosamente Sabroricas, con esa combinacion agridulce que les encanta</p>
+						<!-- <h3>GOMIRICAS DE NARANJA</h3>
 						<p>Aciditas, dulces y chiclosas, se tienen su lugar merecido entre el gusto de la gente, de los primeros productos de Saladitos Sabroricos </p>
-					</div>
+					 --></div>
 					<div class="clearfix"></div>
 				</div>
+					<div class="col-md-4 services-grid">
+					<div class="services-left">
+						<p>07</p>
+					</div>
+					<div class="services-right">
+						<h3>GOMIRICAS DE DURAZNO</h3>
+						<p>Las clasicas de Durazno, ahora con el acidito y picosito sabor de Saladitos Sabroricos, la ponen entre las preferidas de todos por igual </p>
+						<!-- <h3>GOMIRICAS DE NARANJA</h3>
+						<p>Aciditas, dulces y chiclosas, se tienen su lugar merecido entre el gusto de la gente, de los primeros productos de Saladitos Sabroricos </p>
+					 --></div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="col-md-4 services-grid">
+					<div class="services-left">
+						<p>08</p>
+					</div>
+					<div class="services-right">
+						<h3>PULPA TOCHITO PARA ESCARCHAR</h3>
+						<p>Las favoritas de los papas, la Pulpa tochito para escarchar es deliciosamente Sabroricas, combinacion agridulce perfecta para cualquier bebida</p>
+						<!-- <h3>GOMIRICAS DE NARANJA</h3>
+						<p>Aciditas, dulces y chiclosas, se tienen su lugar merecido entre el gusto de la gente, de los primeros productos de Saladitos Sabroricos </p>
+					 --></div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="col-md-4 services-grid">
+					<div class="services-left">
+						<p>09</p>
+					</div>
+					<div class="services-right">
+						<h3>GOMIRICAS DE NARANJA</h3>
+						<p>Aciditas, dulces y chiclosas, se tienen su lugar merecido entre el gusto de la gente, de los primeros productos de Saladitos Sabroricos </p>
+						<!-- <h3>GOMIRICAS DE NARANJA</h3>
+						<p>Aciditas, dulces y chiclosas, se tienen su lugar merecido entre el gusto de la gente, de los primeros productos de Saladitos Sabroricos </p>
+					 --></div>
+					<div class="clearfix"></div>
+				</div>
+
 				<div class="clearfix"></div>
 		</div>
 		
