ajustes de pagina de inicio y top faltanta

--- a/blog2.html
+++ b/blog2.html
@@ -14,7 +14,7 @@ Rialto con chile
 Gomirica de durazno
 Guayaba con chile
 Gomirica de guzano
---> Saladito con chile y limon
+Saladito con chile y limon
 Paleta con sal
 Salado adobado
 Salado con sal 
