--- a/inicio.html
+++ b/inicio.html
@@ -170,6 +170,7 @@
 		</div>
 		<div class="col-md-6 events-left text-center">
 			<img src="images/productos/sabroricos-32.jpg" alt="" />
+			<img src="images/productos/sabroricos-15.jpg" alt="" />
 		</div>
 		<div class="clearfix"></div>
 	</div>
