--- a/services.html
+++ b/services.html
@@ -107,9 +107,9 @@ Top mas vendidos
 						<p>05</p>
 					</div>
 					<div class="services-right">
-						<!-- <h3>GOMIRICAS DE GUSANITO</h3>
-						<p>Las favoritas de los niños, las gomiricas de gusano son deliciosamente Sabroricas, con esa combinacion agridulce que les encanta</p>
-					 --></div>
+						<h3>GOMIRICA DE SANDIA</h3>
+						<p>Consiéntete con una mas de nuestras exquisitas gomiricas.</p>
+					</div>
 					<div class="clearfix"></div>
 				</div>
 				<div class="col-md-4 services-grid">
